--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+    "name": "Jobs-R-Us",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "nodemon server.js"
+    },
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
